# CEFR-speaking-exam-platform

./: index.html  package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/services/: desktopAuthApi.js
src/stores/: auth.js  exam.js
src/views/: AdminDashboard.vue  AuthGate.vue  Exam.vue  ExamComplete.vue  StudentEntry.vue
