[package]
name = "cefr_speaking"
version = "0.1.0"
description = "IELTS Speaking Mock Test App"
authors = ["Shari"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[features]
# This section is required for Tauri
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
